# claims-handler

./: .env-example  README.md  docker-compose.yaml  generate_dummy_invoice.py  mock_claim_initiation.py  pyproject.toml
case-plausibility-check-worker/: Dockerfile  worker.py
common/: storage.py  utils.py
cost-positions-extraction-worker/: Dockerfile  worker.py
data-extraction-worker/: Dockerfile  main.py  worker.py
document-classifier-worker/: Dockerfile  worker.py
email-ingestion-service/: Dockerfile  main.py
email-processing-worker/: Dockerfile  worker.py
grafana/provisioning/dashboards/: Claims Handler-1754865529823.json
monitoring-dashboard/: Dockerfile  main.py
ocr-worker/: Dockerfile  worker.py
policy-coverage-check-worker/: Dockerfile  worker.py
prometheus/: prometheus.yml
